syntax = "proto3";

package subdomain.api.apiquery.v1;

service ApiQueryService {
    rpc GetSubdomainsByApiQuery(ApiQueryRequest) returns (ApiQueryResponse) {}
}

message ApiQueryRequest {
    string target = 1;
}

message ApiQueryResponse {
    repeated string subdomains = 1;
}